<resources>
    <string name="app_name">CarryMe</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="departure">Departure</string>
    <string name="comma">,</string>
    <string name="arrival">Arrival</string>
    <string name="Kg">Kg</string>
    <string name="packetKgText">Packet Kg:</string>
    <string name="showOptions">SHOW AVAILABLE CARS</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="google_place_api">AIzaSyDUoH9wr838_lX_6w6KLt0s8RI2HUtIEa8</string>
    <string name="address">Give an Address</string>
    <string name="start_date_range">Date Range Start</string>
    <string name="end_date_range">Date Range End</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="title_activity_packet_location_page">Map</string>
    <string name="my_packets">My Packets</string>
    <string name="requestPage_Date1_required">Please Enter Start Date of Range !</string>
    <string name="missing_values">Missing Values</string>
    <string name="endDate_compatible">Please Enter a Date After The Start Date</string>
    <string name="give_an_address">Give an Address</string>
    <string name="enter_the_values">Please Enter The All Values !</string>
    <string name="requestPage_departure">Departure: </string>
    <string name="requestPage_arrival">Arrival: </string>
    <string name="driver">Driver: </string>
    <string name="departure_distance">Departure Distance: </string>
    <string name="arrival_distance">Arrival Distance: </string>
    <string name="available_weight">Available Weight: </string>
    <string name="are_you_sure">Do you want to send your packet with this driver?</string>
    <string name="price">Price: </string>
    <string name="total_money">Total Money:</string>
    <string name="total_money_TEXT">Total Money</string>

</resources>
